# telos

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 0001_application_schema.py
scripts/: db_init.py
src/telos/: config.py  main.py  observability.py
src/telos/agents/: __init__.py
src/telos/agents/orchestrator/: __init__.py  graph.py  nodes.py  prompts.py  state.py
src/telos/db/: __init__.py  models.py  session.py
src/telos/db/queries/: __init__.py  chats.py  users.py
src/telos/interfaces/: cli.py  commands.py  tui.py
src/telos/services/: chat.py
tests/: test_chat_service.py  test_cli.py  test_commands.py  test_config.py  test_graph.py  test_main.py  test_observability.py  test_orchestrator.py  test_postgres_integration.py  test_queries.py  test_tui.py
