[project]
name = "telos"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph",
    "langchain",
    "langchain-ollama",
    "langgraph-checkpoint-postgres",
    "langfuse",
    "textual",
    "sqlalchemy",
    "alembic",
    "psycopg[binary,pool]",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=telos --cov-report=term-missing --cov-fail-under=85"
markers = [
    "integration: requires a PostgreSQL database configured by TELOS_TEST_DATABASE_URL",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[project.scripts]
telos = "telos.main:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
